- more code commit

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="msg_title">Message</string>
     <string name="user_title">Hello User</string>
 
+    <string name="action_settings">Action Settings</string>
+
 </resources>
